# UDRMS

./: CMakeLists.txt  Dormitory.cpp  Dormitory.h  DormitoryException.h  README.md  Restaurant.cpp  Restaurant.h  Room.cpp  Room.h  Student.cpp  Student.h  University.cpp  University.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
